Try to fix vertical centering on Safari

--- a/static/photos.css
+++ b/static/photos.css
@@ -408,7 +408,7 @@
      .content {
          padding-left: 5px;
          padding-right: 5px;
-         height: 100%;
+         height: 100vh;
     }
      .glider-slide h3 {
          width: 100%;
@@ -510,7 +510,7 @@
          padding-top: 30px;
          padding-left: 5px;
          padding-right: 5px;
-         height: 95%;
+         height: 90%;
     }
 
      .glider-persp .glider-slide.center img {
